--- a/menu_project/static/css/style.css
+++ b/menu_project/static/css/style.css
@@ -1,3 +1,15 @@
+/* Intro Section */
+.intro-section {
+    margin-bottom: 0;
+    padding: 2rem 0;
+}
+
+.intro-image {
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+}
+
 /* Welcome Section */
 .welcome-section {
     text-align: center;
@@ -25,7 +37,7 @@
 
 /* Category Section */
 .category-section {
-    margin-top: 3rem;
+    margin-top: 0;
 }
 
 .section-title {
@@ -40,7 +52,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 1rem;
-    margin-top: 1.5rem;
+    margin-top: 0px;
 }
 
 .category-card {
@@ -136,45 +148,17 @@
     align-items: center;
     justify-content: center;
     z-index: 9999;
-    overflow: hidden;
-}
-
-.loading-left,
-.loading-right {
-    position: absolute;
-    top: 0;
-    width: 50%;
-    height: 100%;
-    background-color: #000;
-    transition: transform 1s ease-in-out;
-}
-
-.loading-left {
-    left: 0;
-}
-
-.loading-right {
-    right: 0;
 }
 
 .loading-logo {
-    position: relative;
-    z-index: 10000;
+    text-align: center;
 }
 
-.loading-logo-img {
+.loading-logo img {
     width: 80vw;
     max-width: 400px;
     height: auto;
     object-fit: contain;
-}
-
-.loading-screen.door-open .loading-left {
-    transform: translateX(-100%);
-}
-
-.loading-screen.door-open .loading-right {
-    transform: translateX(100%);
 }
 
 @keyframes splitScreen {
