--- a/menu_project/menu/templates/menu/category_list.html
+++ b/menu_project/menu/templates/menu/category_list.html
@@ -7,7 +7,7 @@
     <title>{{ category.name }} - Bid</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
-<body>
+<body class="background-with-gradient">
     <header class="header">
         <div class="container">
             <nav class="nav">
