--- a/menu_project/menu/templates/menu/menu_list.html
+++ b/menu_project/menu/templates/menu/menu_list.html
@@ -7,7 +7,7 @@
     <title>{{ category.name }} - Bid</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
-<body>
+<body class="background-with-gradient">
     <header class="header">
         <div class="container">
             <nav class="nav">
@@ -36,24 +36,22 @@
             <div class="menu-grid" id="menuGrid">
                 {% for item in items %}
                 <div class="menu-item">
-                    {% if item.describe_image %}
-                    <img src="{{ item.describe_image.url }}" alt="{{ item.name }}" class="menu-image">
+                    {% if item.menu_image %}
+                        <!-- 이미지가 있는 경우: 이미지만 표시 -->
+                        <img src="{{ item.menu_image.url }}" alt="{{ item.name }}" class="menu-only-image">
                     {% else %}
-                    <div class="menu-image no-image">
-                        <span>이미지 없음</span>
-                    </div>
+                        <!-- 이미지가 없는 경우: 텍스트 정보 표시 -->
+                        <div class="menu-content">
+                            <h3 class="menu-title">{{ item.name }}</h3>
+                            <p class="menu-description">{{ item.description }}</p>
+                            
+                            {% if item.notes %}
+                            <p class="menu-notes">{{ item.notes }}</p>
+                            {% endif %}
+                            
+                            <div class="menu-price">₩{{ item.price|floatformat:0 }}</div>
+                        </div>
                     {% endif %}
-                    
-                    <div class="menu-content">
-                        <h3 class="menu-title">{{ item.name }}</h3>
-                        <p class="menu-description">{{ item.description }}</p>
-                        
-                        {% if item.notes %}
-                        <p class="menu-notes">{{ item.notes }}</p>
-                        {% endif %}
-                        
-                        <div class="menu-price">₩{{ item.price|floatformat:0 }}</div>
-                    </div>
                 </div>
                 {% empty %}
                 <div class="no-menu">
