--- a/menu_project/static/css/style.css
+++ b/menu_project/static/css/style.css
@@ -3,7 +3,7 @@
     position: fixed;
     top: 10px;
     right: 10px;
-    z-index: 1001;
+    z-index: 999;
     background: transparent;
     color: #fff;
     border: none;
@@ -116,6 +116,37 @@
 .sub-categories a {
     padding: 5px 0;
     font-size: 14px;
+}
+
+.category-only-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 8px;
+}
+
+.category-item {
+    background-color: rgba(0,0,0);
+    border-radius: 0;
+    padding: 2rem 1rem;
+    text-align: center;
+    border: 1px solid rgba(0,0,0);
+    transition: all 0.3s ease;
+    color: #fff;
+    display: block;
+    overflow: hidden;
+}
+
+.category-content {
+    display: block;
+    text-decoration: none;
+    color: inherit;
+    width: 100%;
+    height: 100%;
+}
+
+.category-content:hover {
+    background: rgba(255, 255, 255, 0.1);
 }
 
 .menu-overlay {
@@ -330,7 +361,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    z-index:999;
+    z-index:998;
     pointer-events: none;
 }
 
